--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.1.3",
+    "cached-path-relative": "^1.0.2",
     "core-js": "^2.5.4",
     "popper": "^1.0.1",
     "rxjs": "^6.0.0",
